<resources>
    <string name="app_name">Calculatrice</string>
    <string name="bt_clear">CLEAR</string>
    <string name="bt_division">%</string>
    <string name="bt_multiplication">X</string>
    <string name="bt_soustraction">-</string>
    <string name="bt_addition">+</string>
    <string name="bt_total">=</string>
    <string name="bt_0">0</string>
    <string name="bt_1">1</string>
    <string name="bt_2">2</string>
    <string name="bt_3">3</string>
    <string name="bt_4">4</string>
    <string name="bt_5">5</string>
    <string name="bt_6">6</string>
    <string name="bt_7">7</string>
    <string name="bt_8">8</string>
    <string name="bt_9">9</string>
    <string name="bt_virg">,</string>
</resources>
