<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@color/white"
    tools:context="com.krunch.cdsm05.calculatrice.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.1"
        android:textSize="25sp"
        android:id="@+id/resultat"
        android:textColor="#000000"
        android:drawableRight="@drawable/arrows"
        android:inputType="number"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:weightSum="4"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:id="@+id/bt_clear"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorPrimary"
            android:text="@string/bt_clear"
            android:onClick="onClick"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/bt_division"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/bt_division"
            android:onClick="onClick"
            android:textSize="25sp"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:weightSum="4"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/bt_7"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#000000"
            android:textSize="25sp"
            android:onClick="onClick"
            android:text="@string/bt_7"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/bt_8"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#000000"
            android:textSize="25sp"
            android:onClick="onClick"
            android:text="@string/bt_8"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/bt_9"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#000000"
            android:textSize="25sp"
            android:onClick="onClick"
            android:text="@string/bt_9"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/bt_multiplication"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="1dp"
            android:textSize="20sp"
            android:onClick="onClick"
            android:text="@string/bt_multiplication"
            />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:weightSum="4"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/bt_4"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#000000"
            android:onClick="onClick"
            android:textSize="25sp"
            android:text="@string/bt_4"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/bt_5"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#000000"
            android:onClick="onClick"
            android:textSize="25sp"
            android:text="@string/bt_5"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/bt_6"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#000000"
            android:onClick="onClick"
            android:textSize="25sp"
            android:text="@string/bt_6"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/bt_soustraction"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="1dp"
            android:textSize="25sp"
            android:text="@string/bt_soustraction"
            android:onClick="onClick"
            />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:weightSum="4"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/bt_1"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#000000"
            android:textSize="25sp"
            android:onClick="onClick"
            android:text="@string/bt_1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/bt_2"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#000000"
            android:textSize="25sp"
            android:onClick="onClick"
            android:text="@string/bt_2"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/bt_3"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#000000"
            android:textSize="25sp"
            android:onClick="onClick"
            android:text="@string/bt_3"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/bt_addition"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="1dp"
            android:onClick="onClick"
            android:text="@string/bt_addition"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:weightSum="4"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:id="@+id/bt_0"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#000000"
            android:textSize="25sp"
            android:onClick="onClick"
            android:text="@string/bt_0"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/bt_virg"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#000000"
            android:textSize="25sp"
            android:onClick="onClick"
            android:text="@string/bt_virg"/>


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/bt_total"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="1dp"
            android:onClick="onClick"
            android:text="@string/bt_total"
            />
    </LinearLayout>

</LinearLayout>
